fixed login page spacing

--- a/app/components/Accounts/LoginForm.scss
+++ b/app/components/Accounts/LoginForm.scss
@@ -16,8 +16,8 @@
       0 4px 6px -2px rgba(0, 0, 0, 0.05);
     justify-content: right;
     height: 100vh;
-    padding-top: 25%;
     padding-right: 3%;
+    padding-top: 8%;
   }
 
   .dashboard-login-title {
